You are logged in as user "admin".

--- a/src/main/webapp/app/components/login/login.html
+++ b/src/main/webapp/app/components/login/login.html
@@ -4,9 +4,5 @@
     <h4 class="modal-title" data-translate="login.title">Sign in</h4>
 </div>
 <div class="modal-body">
-    <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <div sp-login-form></div>
-        </div>
-    </div>
+    <div sp-login-form class="modal-login"></div>
 </div>
