Minimum viable product!

--- a/src/main/webapp/app/components/login/login.html
+++ b/src/main/webapp/app/components/login/login.html
@@ -4,5 +4,5 @@
     <h4 class="modal-title" data-translate="login.title">Sign in</h4>
 </div>
 <div class="modal-body">
-    <div sp-login-form class="modal-login"></div>
+    <div sp-login-form template-url="app/stormpath/login.tpl.html"></div>
 </div>
