--- a/src/main/webapp/scss/stormpath.scss
+++ b/src/main/webapp/scss/stormpath.scss
@@ -1,5 +1,5 @@
 @media (min-width: 768px) {
-    .modal-login {
+    .modal-login, .form-registration {
         padding: 5px 15px 0;
 
         .col-sm-offset-4 {
